--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -56,7 +56,7 @@ a:focus {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Creepster', cursive;
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
