--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -224,7 +224,7 @@ a:focus {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/Halloween-Banner_1.jpg) no-repeat center center scroll;
+  background: url(../img/gy2.jpg) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
